@@ -1,0 +1,9 @@
+DROP TABLE IF EXISTS table1;
+CREATE TABLE table1 (
+	id bigint NOT NULL AUTO_INCREMENT PRIMARY KEY
+);
+DROP TABLE IF EXISTS table2;
+CREATE TABLE table2 (
+	id bigint NOT NULL
+);
+ALTER TABLE table2 ADD PRIMARY KEY ( id );
