@@ -1,0 +1,40 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<database>
+    <table>
+        <name>table1</name>
+        <declaration>
+            <field>
+                <name>id</name>
+                <type>integer</type>
+                <autoincrement>true</autoincrement>
+                <notnull>true</notnull>
+            </field>
+            <index>
+                <name>primary</name>
+                <primary>true</primary>
+                <unique>true</unique>
+                <field>
+                    <name>id</name>
+                </field>
+            </index>
+        </declaration>
+    </table>
+    <table>
+        <name>table2</name>
+        <declaration>
+            <field>
+                <name>id</name>
+                <type>integer</type>
+                <notnull>true</notnull>
+            </field>
+            <index>
+                <name>primary</name>
+                <primary>true</primary>
+                <unique>true</unique>
+                <field>
+                    <name>id</name>
+                </field>
+            </index>
+        </declaration>
+    </table>
+</database>
